# aris

./: README.1ST
source_develop/: 3C15_CC.TXT  A.CC  ADAF_disk.c  CC.TXT  EPL_disp.c  GRT_TEC_TID.c  Gaussian_Noise1D.c  Gaussian_noise_check.c  Imakefile  Imakefile_backup  MCM1.TXT  MCM2.TXT  MF.TXT  MF02C  Makefile.in  Makefile.org  Makefile_backup  PA_rotate.c  README.1ST  SEFD.c  SSF_disp.c  TEC_fluctuation_amp.c  TV_menu_hatch.c  VSOP2_logo.c  _button_chk.c  _off_button.c  _on_button.c  _toggle_button.c  airmass.c  allanv_disp.c  ant_pos_err_disp.c  antenna_base_phase.c  antenna_selection.c  antenna_visibility.c  aris.c  array_config.c  asd_model.c  atmospheric_fluctuation.c  attitude_Q.c  az_adjustment.c  (+113 more)
source_develop/aris.dSYM/Contents/: Info.plist
source_develop/aris_input/: 7m_array.prm  ALMA_C8_C43-1.prm  ALMA_C8_C43-7.prm  ALMA_C8_MORITA.prm  C43-06_AlphaCen.prm  C43-08.prm  C43-08_AlphaCen.prm  C43-10.prm  C43-20.prm  ant_trp_tuning.prm  antenna.prm  antenna.prm_alma  fixed_parameter.prm  input.prm  prtspr-54301.prm  ps_model.prm  ps_model.prm_backup2  readme.1st  rlep10.prm  sim.prm  sim.prm_backup  slr_coordinate.txt  tracking_network.prm
source_develop/aris_log/: readme.1st
source_develop/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
source_develop/bhs_data_20080225_Folder/: gv_sequence  passwd
source_develop/include/: aris.h  astrotools.h
source_develop/lib/: readme.1st
source_develop/src/astrotools/: B1950toJ2000.c  EPSIRON.c  GC_CC.c  GST.c  MJD2date.c  Q_tools.c  UTC_minus_TAI.c  astrotools.h  baseline2antenna_number.c  baseline_base2antenna_base_solution.c  baseline_number.c  heirocentric_equatorial_rectangular_coordinates_earth_position.c  luna_position.c  nutation_calc.c  precession_calc.c  solar_motion_J2000.c  vlen2.c  vlen3.c
source_develop/src/astrotools_backup/: ET.c  LST.c  MJD.c  Makefile.in  annual_parallax.c  azel_position.c  configure  configure.in  earth_rotation.c  mean_obliquity_of_the_ecliptic.c  minor_shift_refpos.c  nutation.c  precession.c  sepang.c  sun_position.c  topocentric_equatorial_rectangular_coordinate.c
source_develop/src/mathtools/: Makefile.in  allanv.c  configure  configure.in  cross_product3.c  dmaxmin.c  drotate.c  drotation_matrix_set.c  dvec2scalar.c  dvector_calc.c  farray_dim_change.c  fftrfm.c  fmaxmin.c  frotate.c  inner_product3.c  lstsqr.c  lstsqr2.c  mathtools.h  pol_fit.c  pol_fit_d.c  vec2scalar.c
source_develop/src/pgtools/: Makefile  configure  configure.in  configure.scan  palett.c  (+7 more)
source_develop/tmp/: SSF_disp.c  aca-test-azel  aca-test-radc  acatest-az2  acatest-az4  acatest-el2  acatest-el4  gauss_dev.c.backup  gv_sequence
(+47 files in other folders)
